# EV-Routing-Algorithm

./: .gitignore  CMakeLists.txt  README.md  exampleResult.json  gatherEVStations.py  index.html  platform.txt
data/: Readme.md
include/: ChargeEvent.h  ChargingConnector.h  ChargingPark.h  EvCar.h  EvRouting.h  Graph.h  Point.h  RoutingResult.h  StringUtil.h
src/: Main.cpp
